--- a/style.css
+++ b/style.css
@@ -37,10 +37,12 @@ body {
 
   /* background: color image repeat position/size */
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100%;
 }
 
 #container {
-  width: 368px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
