--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-
-:root{
+:root {
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
@@ -9,7 +8,7 @@
   --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
-.light{
+.light {
   --text-color: black;
   --bg-url: url(./assets/bg-mobile-light.jpg);
   --stroke-color: rgba(0, 0, 0, 0.5);
@@ -20,7 +19,7 @@
 }
 
 * {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   color: var(--text-color);
   margin: 0;
   padding: 0;
@@ -47,7 +46,7 @@ body {
   padding: 0 24px;
 }
 
-#profile{
+#profile {
   text-align: center;
   padding: 24px;
 }
@@ -56,20 +55,19 @@ body {
   width: 112px;
 }
 
-#profile p{
+#profile p {
   font-weight: 500;
   line-height: 24px;
   margin-top: 8px;
 }
 
-#switch{
+#switch {
   position: relative;
   width: 64px;
   margin: 4px auto;
-  
 }
 
-#switch button{
+#switch button {
   width: 32px;
   height: 32px;
   background: white var(--switch-bg-url) no-repeat center;
@@ -81,14 +79,19 @@ body {
   left: 0;
   transform: translateY(-50%);
   cursor: pointer;
+
+  animation: slide-b 0.4s;
 }
 
-.light #switch button{
-  right: 0;
-  left: initial;
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
-#switch span{
+.light #switch button {
+  animation: slide-in 0.4s forwards;
+}
+
+#switch span {
   display: block;
   width: 64px;
   height: 24px;
@@ -98,8 +101,7 @@ body {
   border-radius: 9999px;
 }
 
-
-ul{
+ul {
   list-style: none;
   display: flex;
   flex-direction: column;
@@ -107,7 +109,7 @@ ul{
   padding: 24px 0 24px;
 }
 
-ul li a{
+ul li a {
   text-decoration: none;
   border: 1px solid var(--stroke-color);
   display: flex;
@@ -118,36 +120,36 @@ ul li a{
   border-radius: 8px;
   font-weight: 500;
   backdrop-filter: blur(4px);
-  transition: background .5s;
+  transition: background 0.5s;
 }
 
-ul li a:hover{
+ul li a:hover {
   border: 1.5px solid var(--text-color);
   background: var(--surface-color-hover);
 }
 
-#social-links{
+#social-links {
   display: flex;
   padding: 24px 0;
   font-size: 24px;
   justify-content: center;
 }
 
-#social-links a{
+#social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 16px;
-  transition: background .2s;
+  transition: background 0.2s;
   border-radius: 50%;
 }
 
-#social-links a:hover{
+#social-links a:hover {
   background: var(--highlight-color);
   padding: 16px;
 }
 
-footer{
+footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
@@ -158,7 +160,25 @@ footer{
     --bg-url: url(./assets/bg-desktop.jpg);
   }
 
-  .light{
+  .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-b {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
